--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,1 +1,25 @@
+name: SSH the machine and copy a repositary
 
+on:
+  push:
+    branches:
+      - main  
+
+jobs:
+  ssh-job:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout Code
+      uses: actions/checkout@v3
+
+    - name: Install SSH Client and Rsync
+      run: sudo apt-get update && sudo apt-get install -y openssh-client rsync
+
+    - name: SSH and Copy Repo to EC2
+      env:
+        SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
+      run: |
+        mkdir -p ~/.ssh
+        echo "$SSH_KEY" | ssh-agent sh -c 'ssh-add - >/dev/null && rsync -avz -e "ssh -o StrictHostKeyChecking=no" ./ ubuntu@ec2-13-126-44-102.ap-south-1.compute.amazonaws.com:/home/ubuntu/TEST/'
+      shell: bash
