--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,4 +1,4 @@
-name: SSH the machine and copy a repositary
+name: pipeline for backend deployment
 
 on:
   push:
@@ -16,10 +16,20 @@ jobs:
     - name: Install SSH Client and Rsync
       run: sudo apt-get update && sudo apt-get install -y openssh-client rsync
 
-    - name: SSH and Copy Repo to EC2
+    - name: SSH and Deploy to EC2
       env:
         SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
       run: |
         mkdir -p ~/.ssh
-        echo "$SSH_KEY" | ssh-agent sh -c 'ssh-add - >/dev/null && rsync -avz -e "ssh -o StrictHostKeyChecking=no" ./ ubuntu@ec2-13-126-44-102.ap-south-1.compute.amazonaws.com:/home/ubuntu/TEST/'
+        echo "$SSH_KEY" | ssh-agent sh -c 'ssh-add - >/dev/null && ssh -o StrictHostKeyChecking=no ec2-13-126-44-102.ap-south-1.compute.amazonaws.com << EOF
+          sudo su -
+          cd /home/ubuntu/TEST/hrms-devops/hrma-uat
+          docker rmi -f hrms-backend-uat
+          docker compose down
+          cd hrms/HRMS-LMS\ App
+          git pull
+          docker build -t hrms-backend-uat .
+          cd ../..
+          docker compose up -d
+          EOF'
       shell: bash
